[tool.poetry]
name = "librephotos"
version = "0.3.0"
description = "A self-hosted open source photo management service, with a slight focus on cool graphs."
authors = ["Faradani Rad <faridani.rad@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://librephotos.com/"
repository = "https://github.com/LibrePhotos/librephotos"
documentation = "https://docs.librephotos.com/"
keywords = ['owncloud', 'ownphotos', 'photos', '']
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Other Environment",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",

]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "1.4.0"
Django = "3.1.8"
django-constance = "2.7.0"
django-cors-headers = "3.5.0"
django-cryptography = "1.0"
django-extensions = "3.0.9"
django-filter = "2.4.0"
django-picklefield = "3.0.1"
django-redis = "4.12.1"
django-rq = "2.4.0"
django-bulk-update = "*"
djangorestframework = "3.12.4"
djangorestframework-simplejwt = "4.6.0"
drf-extensions = "0.7.0"
drf-yasg = "1.20.0 "
ExifRead = "2.3.2"
face-recognition = "1.2.3"
faiss-cpu = "1.7.0"
Flask = "1.0"
Flask-Cors = "3.0.9"
Flask-RESTful = "0.3.6"
geopy = "2.1.0"
gunicorn = "20.1.0"
matplotlib = "3.3.2 "
networkx = "2.5"
nltk = "3.5"
Pillow = "8.1.1"
psycopg2 = "2.8.6"
pycocotools = "2.0.2"
pyocclient = "0.6.0"
pytz = "2020.1"
PyExifTool = "0.4.9"
rq = "1.6.1"
six = "1.15.0 "
scipy = "1.5.3"
seaborn = "0.11.0"
serpy = "0.3.1"
sklearn = "0.0"
spacy = "2.3.2"
tqdm = "4.51.0"
gevent = "20.9.0"
python-magic = "0.4.18"
Wand = "0.6.6"
[[tool.poetry.dependencies.torch]]
python = "^3.8"
markers = "platform_system == 'Linux'"
url = "https://download.pytorch.org/whl/cpu/torch-1.8.1%2Bcpu-cp38-cp38-linux_x86_64.whl"
[[tool.poetry.dependencies.torchvision]]
python = "^3.8"
markers = "platform_system == 'Linux'"
url = "https://download.pytorch.org/whl/cpu/torchvision-0.9.1%2Bcpu-cp38-cp38-linux_x86_64.whl"

[tool.poetry.dev-dependencies]
ipdb = "0.10.3"
ipython = "7.19.0"
ipython-genutils = "0.2.0"
Pygments = "2.7.4"
prompt-toolkit = "3.0.8"
nose = "1.3.7"
pylint = "2.6.0"
flake8 = "3.8.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
